# django

django_task1/: .env  pyproject.toml
django_task1/config/: settings.py
django_task2/: .env  pyproject.toml
django_task2/config/: settings.py
django_task3/: .env  pyproject.toml
django_task3/config/: settings.py
django_task4/: .env  pyproject.toml
django_task4/config/: settings.py
django_task5/: .env  adia  pyproject.toml
django_task5/config/: settings.py
